--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "BringRadical"
+name = "BringRadicals"
 uuid = "38ceb820-2f3a-4e5c-8845-9b99a222b5db"
 authors = ["Oscar Smith <oscardssmith@gmail.com> and contributors"]
 version = "0.1.0"
